sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:5: error: not found: value lasEchange
    lasEchange = false
    ^